--- a/Style/style.css
+++ b/Style/style.css
@@ -358,5 +358,17 @@ padding-top: 20px;
     font-weight: 800;
 }
 /*support-content full box End*/
+/*contact-social-media item start*/
+
+#contact-social-media{
+    
+    height: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 200px;
+   
+}
+
 
 
